{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 12,
  "lineage": "973f7a3b-4217-2fb8-ab46-6d5637d53760",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwtf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686781234621:internet-gateway/igw-0473f215f6ddf8aea",
            "id": "igw-0473f215f6ddf8aea",
            "owner_id": "686781234621",
            "tags": {
              "Name": "IGWTF"
            },
            "vpc_id": "vpc-0294c9db3f7b78a06"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de4439b609bc5df7",
            "owner_id": "686781234621",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRT"
            },
            "vpc_id": "vpc-0294c9db3f7b78a06"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-055a6334668ffd351",
            "owner_id": "686781234621",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0473f215f6ddf8aea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT"
            },
            "vpc_id": "vpc-0294c9db3f7b78a06"
          },
          "dependencies": [
            "aws_internet_gateway.igwtf",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048ebec3985f81e96",
            "route_table_id": "rtb-055a6334668ffd351",
            "subnet_id": "subnet-02054b37d3c80ecba"
          },
          "dependencies": [
            "aws_internet_gateway.igwtf",
            "aws_route_table.pubRT",
            "aws_subnet.pubsubnet",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d24382ad59726bc1",
            "route_table_id": "rtb-0de4439b609bc5df7",
            "subnet_id": "subnet-03445acea13b1d00c"
          },
          "dependencies": [
            "aws_route_table.priRT",
            "aws_subnet.prisubnet",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686781234621:security-group/sg-02cf07fe14a9d6570",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cf07fe14a9d6570",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "686781234621",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0294c9db3f7b78a06"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686781234621:subnet/subnet-03445acea13b1d00c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-03445acea13b1d00c",
            "map_public_ip_on_launch": false,
            "owner_id": "686781234621",
            "tags": {
              "Name": "Privatesubnet"
            },
            "vpc_id": "vpc-0294c9db3f7b78a06"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686781234621:subnet/subnet-02054b37d3c80ecba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-02054b37d3c80ecba",
            "map_public_ip_on_launch": false,
            "owner_id": "686781234621",
            "tags": {
              "Name": "Publicsubnet"
            },
            "vpc_id": "vpc-0294c9db3f7b78a06"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpctf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686781234621:vpc/vpc-0294c9db3f7b78a06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0257aa9ea52ba1701",
            "default_route_table_id": "rtb-018a61b8639faed15",
            "default_security_group_id": "sg-083c928d109da4ee5",
            "dhcp_options_id": "dopt-a8483ed0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0294c9db3f7b78a06",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-018a61b8639faed15",
            "owner_id": "686781234621",
            "tags": {
              "Name": "VPCTF"
            }
          }
        }
      ]
    }
  ]
}